# Pacts

./: README.md
.github/workflows/: ci-java.yml  ci-rust.yml
java/: pom.xml
java/src/main/java/net/hydrius/pacts/: Envelope.java  Header.java  PactsService.java  SchemaLoader.java  ValidationResult.java  Validator.java
java/src/main/java/net/hydrius/pacts/core/: SchemaLoader.java  ValidationResult.java  Validator.java
java/src/main/java/net/hydrius/pacts/impl/: PactsService.java
java/src/main/java/net/hydrius/pacts/model/: Envelope.java  Header.java
java/src/main/resources/: application.yml
java/src/test/java/net/hydrius/pacts/: EnvelopeTest.java  HeaderTest.java  SchemaLoaderTest.java  ValidationResultTest.java  ValidatorTest.java
java/src/test/resources/: application.yml
rust/: Cargo.toml  build.rs
rust/resources/: sources.yaml
rust/src/: envelope.rs  header.rs  lib.rs  schema_loader.rs  service.rs  validator.rs
rust/src/core/: mod.rs  schema_loader.rs  validator.rs
rust/src/impl/: mod.rs  service.rs
rust/src/model/: envelope.rs  header.rs  mod.rs
schemas/bees/v1/definition/: collection_definition.json  item_definition.json  quest_stage_definition.json
schemas/bees/v1/inventory/: inventory_item.json  inventory_request.json  inventory_response.json
schemas/bees/v1/invitation/: invitation.json  invitation_request.json  invitation_response.json
schemas/bees/v1/player/: player_request.json  player_response.json
schemas/bees/v1/profile/: profile.json  profile_invitation.json  profile_member.json  profile_response.json
(+6 files in other folders)
