[package]
name = "pacts"
version = "0.0.4"
edition = "2021"
build = "build.rs"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1.0"
regex = "1.0"
rust-embed = "8.5"

[dev-dependencies]
tempfile = "3.0"
