[package]
name = "pacts"
version = "0.0.5"
edition = "2021"

[lib]
crate-type = ["rlib", "staticlib"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1.0"
regex = "1.0"
zip = { version = "7.4.0", default-features = false, features = ["deflate"] }
serde_yaml = "0.9"
ureq = "3.2.0"

[dev-dependencies]
# tempfile temporarily removed due to Rust version compatibility issues
# tempfile = "3.8"
